<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jorge.pruebaquadram.Activities.DetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:weightSum="4"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_margin="5dp">


        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/imageViewImageDetailApp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="7dp"
            android:weightSum="2">

            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="APP Name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:maxLines="5"
                android:id="@+id/textViewAppDetailName"/>
            <TextView
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="APP Developer"
                android:textSize="15sp"
                android:id="@+id/textViewAppDetailDeveloper"/>

        </LinearLayout>
        <TextView
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:gravity="bottom"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:id="@+id/textViewAppDetailPrice"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:id="@+id/viewFavoritos"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewCategory"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCategoriaDetailApp"
                android:layout_marginTop="5dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewVersion"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewVersionDetailApp"
                android:layout_marginTop="5dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewReleaseDate"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewReleaseDateDetailApp"
                android:layout_marginTop="5dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewCurrentVersion"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCurrentVersionADetailpp"
                android:layout_marginTop="5dp"
                android:textSize="15sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewDescription"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewDescriptionDetailApp"
                            android:layout_marginTop="5dp"
                            android:textSize="15sp" />
                    </LinearLayout>






         </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>
